...

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:id="@+id/qdetails_question_username"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_question_title"
        android:textSize="40sp"
...
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/answers_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:listitem="@layout/question_details_answer_item" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

...
                android:layout_gravity="center"
                android:layout_weight="2">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/write_reply_box"
                    android:hint="@string/write_an_answer"
                    android:layout_gravity="center"
                    android:background="@color/fui_transparent"
                    android:textColorHint="@color/courseColor"
                    android:textSize="20sp"
                    android:layout_weight="2"
...
            android:padding="4dp"
            app:tint="@color/white" />

        <ImageButton
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/post_reply_button"
            android:clickable="true"
            android:visibility="visible"
            android:layout_gravity="center"
            android:src="@drawable/send_icon"
            android:background="@drawable/round_corner"
            app:tint="@color/white"
...
