...
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:id="@+id/latex_window_root" >

    <TextView
        android:id="@+id/latex_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/latex_input"
...
